Se creó la Base de Datos, llamada agencia.mdf, y se agregaron las tablas de cada entidad

--- a/Vistas/Vistas.csproj
+++ b/Vistas/Vistas.csproj
@@ -46,6 +46,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="agenciaDataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>agenciaDataSet.xsd</DependentUpon>
+    </Compile>
     <Compile Include="FrmAltaDepartamento.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -98,6 +103,18 @@
       <SubType>Designer</SubType>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <None Include="agenciaDataSet.xsc">
+      <DependentUpon>agenciaDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="agenciaDataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>agenciaDataSet.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="agenciaDataSet.xss">
+      <DependentUpon>agenciaDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="app.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
