--- a/Vistas/Vistas.csproj
+++ b/Vistas/Vistas.csproj
@@ -160,6 +160,9 @@
   <ItemGroup>
     <None Include="Resources\ImgUser.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\person-plus-fill.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
