--- a/ClaseBase/ClaseBase.csproj
+++ b/ClaseBase/ClaseBase.csproj
@@ -33,6 +33,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -46,11 +47,29 @@
     <Compile Include="Edificio.cs" />
     <Compile Include="Inquilino.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
     <Compile Include="Rol.cs" />
+    <Compile Include="TrabajarAlquiler.cs" />
+    <Compile Include="TrabajarDepartamento.cs" />
+    <Compile Include="TrabajarEdificio.cs" />
+    <Compile Include="TrabajarInquilino.cs" />
+    <Compile Include="TrabajarLogin.cs" />
+    <Compile Include="TrabajarUsuario.cs" />
+    <Compile Include="UserLogin.cs" />
     <Compile Include="Usuario.cs" />
+    <Compile Include="ValidarUtil.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="ClassDiagram1.cd" />
+    <None Include="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
