--- a/Vistas/Vistas.csproj
+++ b/Vistas/Vistas.csproj
@@ -46,6 +46,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="agenciaDataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>agenciaDataSet.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="frmGestionAlquiler.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmGestionAlquiler.Designer.cs">
+      <DependentUpon>frmGestionAlquiler.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmGestionInquilino.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmGestionInquilino.Designer.cs">
+      <DependentUpon>frmGestionInquilino.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmAltaDepartamento.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -64,6 +81,18 @@
     <Compile Include="FrmAltaInquilino.Designer.cs">
       <DependentUpon>FrmAltaInquilino.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmAltaUsuario.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmAltaUsuario.Designer.cs">
+      <DependentUpon>frmAltaUsuario.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmBienvenida.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmBienvenida.Designer.cs">
+      <DependentUpon>frmBienvenida.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmLogin.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -76,8 +105,26 @@
     <Compile Include="FrmMain.Designer.cs">
       <DependentUpon>FrmMain.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmGestionUsuario.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmGestionUsuario.Designer.cs">
+      <DependentUpon>frmGestionUsuario.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="FrmPrincipal.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmPrincipal.Designer.cs">
+      <DependentUpon>FrmPrincipal.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="frmGestionAlquiler.resx">
+      <DependentUpon>frmGestionAlquiler.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmGestionInquilino.resx">
+      <DependentUpon>frmGestionInquilino.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FrmAltaDepartamento.resx">
       <DependentUpon>FrmAltaDepartamento.cs</DependentUpon>
     </EmbeddedResource>
@@ -87,17 +134,41 @@
     <EmbeddedResource Include="FrmAltaInquilino.resx">
       <DependentUpon>FrmAltaInquilino.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="frmAltaUsuario.resx">
+      <DependentUpon>frmAltaUsuario.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmBienvenida.resx">
+      <DependentUpon>frmBienvenida.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FrmLogin.resx">
       <DependentUpon>FrmLogin.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmMain.resx">
       <DependentUpon>FrmMain.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="frmGestionUsuario.resx">
+      <DependentUpon>frmGestionUsuario.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <SubType>Designer</SubType>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <EmbeddedResource Include="FrmPrincipal.resx">
+      <DependentUpon>FrmPrincipal.cs</DependentUpon>
+    </EmbeddedResource>
+    <None Include="agenciaDataSet.xsc">
+      <DependentUpon>agenciaDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="agenciaDataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>agenciaDataSet.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="agenciaDataSet.xss">
+      <DependentUpon>agenciaDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="app.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -124,6 +195,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\ImgUser.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\background-2344222_640.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
